# mdn-repos

./: .gitignore  README.md  justfile
repos/mee-db/: Cargo.toml  lark_gramma.ebnf  mee_ql.pest  readme.md  v0_1.md
repos/mee-db/mee-ql/: Cargo.toml
repos/mee-db/mee-ql/src/: app_ctl.rs  error.rs  lib.rs  main.rs
repos/mee-db/mee-ql/src/api/: api_methods.rs  api_schema.rs  api_types.rs  examples.rs  mod.rs
repos/mee-db/mee-ql/src/model/: data.rs  mod.rs  query.rs  schema.rs
repos/mee-db/mee-ql/src/storage/: mod.rs
repos/mee-db/mee-storage/: Cargo.toml
repos/mee-db/mee-storage/src/: error.rs  main.rs
repos/mee-db/mee-storage/src/binary_kv_store/: b_tree_map_store.rs  mod.rs
repos/mee-db/mee-storage/src/json_db/: db.rs  mod.rs  query.rs
repos/mee-db/mee-storage/src/json_kv_store/: field_filter.rs  mod.rs  range_iterator copy.rs  storage.rs
repos/mee-db/mee-storage/src/json_store/: db.rs  mod.rs  query.rs  range_iterator.rs  storage.rs  support.rs
repos/mee-db/mee-storage/src/json_utils/: json_ext.rs  support.rs
repos/mee-db/mee-storage/src/kv_store/: b_tree_map_store.rs  mod.rs
repos/mee-db/mee-storage/src/query_el/: _test_support.rs  condition.rs  derive_clause.rs  expression.rs  mod.rs  query.rs  select_clause.rs  where_clause.rs
repos/mee-db/mee_ql/: Cargo.toml
repos/mee-db/mee_ql/src/: app_ctl.rs  ast.rs  config.rs  error.rs  evalator.rs  lib.rs  logic.rs  main.rs  parse.rs  parser.rs  query_executor.rs  support.rs
repos/mee-db/mee_ql/src/api/: api_methods.rs  api_schema.rs  examples.rs  mod.rs
repos/mee-db/mee_ql/src/execution/: bool_expression_execution.rs  comparator_execution.rs  context.rs  executor.rs  expression_execution.rs  iterator_stmt_execution.rs  mee_value_execution.rs  mod.rs  path_execution.rs  query_execution.rs  support.rs
repos/mee-db/mee_ql/src/parser/: ast_impls.rs  bool_expression_parser.rs  comparator_parser.rs  error_text.rs  execution_context.rs  expression_parser.rs  iterator_parser.rs  mod.rs  parser.rs  query_parser.rs  statement_parser.rs  support.rs  tests_can_parse.rs  value_parser.rs
repos/mee-db/mee_ql_api/: Cargo.toml
repos/mee-db/mee_ql_api/.cargo/: config.toml
repos/mee-db/mee_ql_api/src/: app_ctl.rs  error.rs  main.rs
repos/mee-db/mee_ql_api/src/api/: api_methods.rs  api_schema.rs  examples.rs  mod.rs
repos/mee-db/mee_storage/: Cargo.toml  readme.md
repos/mee-db/mee_storage/src/: error.rs  lib.rs  schema.rs
repos/mee-db/mee_storage/src/binary_kv_store/: b_tree_map_store.rs  error.rs  mod.rs
repos/mee-db/mee_storage/src/json_db/: db.rs  error.rs  mod.rs
repos/mee-db/mee_storage/src/json_kv_store/: binary_store.rs  error.rs  field_filter.rs  json_store.rs  json_store_record.rs  mod.rs  storage.rs  support.rs
repos/mee-db/mee_storage/src/json_kv_store_old/: error.rs  field_filter.rs  mod.rs
repos/mee-db/mee_storage/src/json_utils/: json_ext.rs  mod.rs  support.rs
repos/mee-db/mee_storage/src/mock_binary_kv_store/: b_tree_map_store.rs  mod.rs
repos/mee-db/mee_storage/src/query_el/: _test_support.rs  condition.rs  derive_clause.rs  error.rs  expression.rs  mod.rs  query.rs  select_clause.rs  where_clause.rs
repos/mee-db/tree_sitter_mee_ql/: Cargo.toml  grammar.js  package-lock.json  package.json  tree-sitter.json
repos/mee-db/tree_sitter_mee_ql/bindings/c/: tree-sitter-mee_ql.h  tree-sitter-mee_ql.pc.in
repos/mee-db/tree_sitter_mee_ql/bindings/rust/: build.rs  lib.rs
repos/mee-db/tree_sitter_mee_ql/examples/: add-payment-card.txt  find-by-country-code.txt  find-by-email.txt  find-by-id.txt  find-for-refund.txt  find-purchase-after.txt  limit-10-by-age-gender-and-country.txt
repos/mee-db/tree_sitter_mee_ql/src/: grammar.json  node-types.json  parser.c
repos/mee-db/tree_sitter_mee_ql/test/corpus/: assigment_expressions.txt  comparison.txt  expected_examples.txt  json_expressions.txt  logical_expressions.txt  main.txt  parsing_errors.txt  upsert_expressions.txt
repos/mee-network-administration/services/mdn_central/: .env.example  Cargo.toml  Makefile  README.md
repos/mee-network-administration/services/mdn_central/src/: app_ctl.rs  config.rs  error.rs  main.rs  migrator.rs
repos/mee-network-administration/services/mee_provider_manager/: .env.example  Cargo.toml  Makefile  README.md
repos/mee-network-administration/services/mee_provider_manager/src/: app_ctl.rs  error.rs  main.rs
repos/mee-network-administration/services/oidc_provider/: .env.example  Cargo.toml  Makefile
repos/mee-network-administration/services/oidc_provider/src/: app_ctl.rs  config.rs  error.rs  main.rs
repos/mee-network-administration/services/oidc_provider/templates/: consent_page.html  login_page.html
repos/mee-network-administration/services/service_utils/: Cargo.toml  README.md
repos/mee-network-administration/services/service_utils/src/: lib.rs
repos/mee-network-core/lib/: Cargo.toml
repos/mee-network-core/lib/mdn_identity_agent/: Cargo.toml  README.md
repos/mee-network-core/lib/mdn_identity_agent/src/: error.rs  lib.rs
repos/mee-network-core/lib/mdn_identity_agent/tests/: device_registration.rs  mdn_custodian_storage_registration.rs  mdn_node_registration.rs  (+1 more)
repos/mee-network-core/lib/mee_crypto/: Cargo.toml
repos/mee-network-core/lib/mee_data_sync/: Cargo.toml  README.md
repos/mee-network-core/lib/mee_did/: Cargo.toml
repos/mee-network-core/lib/mee_secrets_manager/: Cargo.toml  README.md
repos/mee-network-provider/services/: Cargo.toml  dev.common.mk
repos/mee-network-provider/services/agent_service/: .env.example  Cargo.toml  Makefile
repos/mee-network-provider/services/dev_secrets/: Cargo.toml  Makefile
repos/mee-network-provider/services/dev_secrets_keygen/: Cargo.toml  Makefile  README.md
repos/mee-network-provider/services/provider_authority_secrets/: Cargo.toml
repos/mee-utils/lib/: Cargo.toml
repos/mee-utils/lib/mee_async_utils/: Cargo.toml
repos/mee-utils/lib/mee_db_utils/: Cargo.toml
repos/mee-utils/lib/mee_http_utils/: Cargo.toml
repos/mee-utils/lib/mee_macro_utils/: Cargo.toml
repos/mee-utils/lib/mee_test_utils/: Cargo.toml
(+663 files in other folders)
