[workspace]
resolver = "2"

members = ["mee-ql"]

[workspace.dependencies]
clap = "4.5.11"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
axum = "0.7.5"
utoipa = "4.2.3"
utoipa-swagger-ui = "7.1.0"
thiserror = "1.0"
strum = "0.26.3"
tracing = "0.1.26"
tokio = "1.39.2"
tracing-subscriber = "0.3.18"
sled = "0.34"
