[workspace]
resolver = "2"

members = ["mee-ql", "mee-storage"]

[workspace.dependencies]
clap = "4.5"
chrono = "0.4"
serde = "1"
serde_json = "1"
axum = "0.7.5"
utoipa = "4.2.3"
utoipa-swagger-ui = "7.1"
thiserror = "1.0"
strum = "0.26.3"
tracing = "0.1.26"
tokio = "1.39.3"
tracing-subscriber = "0.3.18"
sled = "0.34"
uuid = "1.10"
anyhow = "1.0.44"
assert-json-diff = "2.0.2"
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"
