[package]
name = "mee_ql"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-mee-ql = { path = "../tree_sitter_mee_ql" }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
