[package]
name = "tree-sitter-mee-ql"
description = "MeeQl grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "your-language-name"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-your-language-name"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = { workspace = true }

[build-dependencies]
cc = { workspace = true }

[dev-dependencies]
tree-sitter = { workspace = true }
