[package]
name = "mee_provider_manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
default-run = "mee_provider_manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "migrator"
path = "src/migrator.rs"

[lib]
name = "migrations"
path = "migrations/mod.rs"

[dependencies]
mee_db_utils = { path = "../../../mee-utils/lib/mee_db_utils" }
mee_http_utils = { path = "../../../mee-utils/lib/mee_http_utils" }
service_utils = { path = "../service_utils" }
mee_secrets_manager = { path = "../../../mee-network-core/lib/mee_secrets_manager" }
mee_authority_secrets = { path = "../mee_authority_secrets" }
mee_crypto = { path = "../../../mee-network-core/lib/mee_crypto" }

clap = { workspace = true, features = ["derive", "env"] }
sea-orm-migration = { workspace = true }
sea-orm = { workspace = true, features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "with-chrono",
] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
url = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
  "json",
  "rustls-tls",
] }
dotenvy = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "tracing-log",
] }
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header", "cookie"] }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true }
strum_macros = { workspace = true }
async-trait = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
biscuit-auth = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
utoipa = { workspace = true, features = ["axum_extras", "url"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
tower-http = { workspace = true, features = ["trace"] }