[package]
name = "mdn_identity_agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mee_macro_utils = { path = "../../../mee-utils/lib/mee_macro_utils" }
mee_crypto = { path = "../mee_crypto" }
mee_data_sync = { path = "../mee_data_sync" }

async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
