[package]
name = "mee_data_sync"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mee_macro_utils = { path = "../../../mee-utils/lib/mee_macro_utils" }

async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
utoipa = { workspace = true }

bytes = { version = "1.4", features = ["serde"] }
tokio-stream = "0.1"
rand = "0.8"

iroh-willow = { package = "iroh-willow", git = "https://github.com/Voronar/iroh", branch = "willow-experiments" }
iroh-net = { package = "iroh-net", git = "https://github.com/Voronar/iroh", branch = "willow-experiments" }
iroh-blobs = { package = "iroh-blobs", git = "https://github.com/Voronar/iroh", branch = "willow-experiments" }
iroh-base = { package = "iroh-base", git = "https://github.com/Voronar/iroh", branch = "willow-experiments" }

[dev-dependencies]
env_logger = "0.11"
iroh-test = { package = "iroh-test", git = "https://github.com/Voronar/iroh", branch = "willow-experiments" }
