[package]
name = "mee_secrets_manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm

[dependencies]
mee_crypto = { path = "../mee_crypto" }
mee_did = { path = "../mee_did" }
mee_data_sync = { path = "../mee_data_sync" }

async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt"] }
identity_jose = { workspace = true }
serde_json = { workspace = true }
biscuit-auth = { workspace = true }
derive_builder = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
clap = { workspace = true, features = ["derive", "env"] }