[package]
name = "dev_secrets_keygen"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mee_secrets_manager = { path = "../../../mee-network-core/lib/mee_secrets_manager" }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt"] }
clap = { workspace = true, features = ["derive", "env"] }
