[package]
name = "provider_authority_secrets"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "keygen"
path = "src/keygen.rs"

[dependencies]
mee_secrets_manager = { path = "../../../mee-network-core/lib/mee_secrets_manager" }
mee_crypto = { path = "../../../mee-network-core/lib/mee_crypto" }

async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt"] }
identity_jose = { workspace = true }
serde_json = { workspace = true }
biscuit-auth = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
clap = { workspace = true, features = ["derive", "env"] }