[package]
name = "mee_http_utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { workspace = true, features = ["derive"] }
